Finished 3rd test DisplaysErrorsWhenUserDoesNotExist, and created ErrorMsg in LoginPage

--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,16 @@
             <version>7.5</version>
             //  <scope>test</scope>   // ctrl + /
         </dependency>
+        <dependency>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+            <version>1.0.2</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
-
+    <dependency>
+        <groupId>com.github.javafaker</groupId>
+        <artifactId>javafaker</artifactId>
+        <version>1.0.2</version>
+    </dependency>
 </project>
